# afi-python-library

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  run_tests.py
.github/workflows/: draft-pdf.yml  tests.yml
afi/: __init__.py  convergence.py  exploration.py  gradient.py  validation.py
afi/core/: __init__.py  distortion.py  freedom.py  perception.py
docs/: APPENDIX_DATA.md
paper/: paper.bib  paper.md
tests/: test_afi.py
