[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "afi"
version = "0.1.0"
description = "Architecture of Freedom Intelligence: F = P/D across domains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gonçalo Melo", email = "hi@planta.design"},
]
keywords = [
    "freedom", "swarm-intelligence", "complex-systems", "perception",
    "distortion", "exploration-exploitation", "gradient-dynamics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]
viz = ["matplotlib>=3.5", "seaborn>=0.12"]
all = ["networkx>=2.8", "salib>=1.4", "scikit-learn>=1.1"]

[project.urls]
Homepage = "https://github.com/goncalomelo/afi"
Documentation = "https://github.com/goncalomelo/afi#readme"
Repository = "https://github.com/goncalomelo/afi"

[tool.pytest.ini_options]
testpaths = ["tests"]
